--- a/bilibili-lite/src/public/button.styl
+++ b/bilibili-lite/src/public/button.styl
@@ -81,6 +81,10 @@ button
 .top-header .focus-btn
 .coin-dialog-mask .coin-operated .coin-bottom .coin-btn
 .el-pagination.is-background .el-pager li.active
+.select-type .type-group li.on
+.music-pagination .current
+.primary-btn
+.schedule-list .match-operate.live
   position relative
   border-color var(--c-accent) !important
   background-color var(--c-accent) !important
@@ -178,6 +182,12 @@ button
 .button-bar .bp-button
 .el-pagination.is-background .el-pager li
 .warning-btn
+.select-type .type-group li
+.music-pagination .tcd-number
+.page-btn
+.score-contain .allmatch
+.schedule-time .time
+.calendar-header .day-select
   border 1px solid var(--c-border) !important
   background-color var(--c-background) !important
   color var(--c-title) !important
@@ -201,5 +211,6 @@ button
 .pagelist .flip-left .ellipsis
 .paging-box .next
 .paging-box .prev
+.music-pagination .dian
   border-color transparent !important
   background-color transparent !important
