--- a/bilibili-lite/src/public/form.styl
+++ b/bilibili-lite/src/public/form.styl
@@ -14,6 +14,7 @@ table
       th
       td
         border-color var(--c-border) !important
+        box-shadow none !important
         background-color var(--c-background) !important
         color var(--c-text) !important
 
@@ -51,12 +52,17 @@ table
 .list-header .filter-wrp .order-wrp
 .ui-dropdown .ui-dropdown-text
 .date-input
+.datepicker-popup
+.calendar-year
+.bili-dropdown
+.bili-dropdown .dropdown-list
   border 1px solid var(--c-border) !important
   background-color var(--c-background) !important
 
 .ui-dropdown .ul-dropdown-list .dropdown-item:hover
 .head .dropdown-menu li.ellipsis:hover
 .ui-select .ul-select-list .select-item:hover
+.bili-dropdown .dropdown-list .dropdown-item:hover
   background-color var(--c-hover) !important
 
 .ui-select .ul-select-list .select-item.active
