--- a/bilibili-lite/src/read/home.styl
+++ b/bilibili-lite/src/read/home.styl
@@ -15,6 +15,7 @@
 .page-content .right-side .search-module .search-block .search-word-panel .suggest-item:hover
 .page-content .left-side .article-list .article-list-holder .article-item:hover
 .nav-tab-bar .tab-item.on
+.nav-tab-bar .tab-item:hover
   background-color var(--c-hover)
 
 .page-content .right-side .more .help .info
@@ -25,6 +26,9 @@
 .page-content .left-side .article-list .article-list-holder .article-item .item-holder .article-info-bar .category
 .page-content .left-side .article-list .article-list-holder .article-item .item-holder .article-info-bar .reply
   color var(--c-text) !important
+
+.nav-tab-bar .tab-item.on span
+  color var(--c-accent) !important
 
 .categories-bar
 .page-content .right-side .search-module .search-block .search-word-panel .panel-title .split-line
@@ -38,6 +42,7 @@
   margin-right 0
   margin-left -130px
   height 40px
+  border-radius 10px
   text-align center
   line-height 40px
 
