--- a/bilibili-lite/src/read/info.styl
+++ b/bilibili-lite/src/read/info.styl
@@ -97,3 +97,9 @@
 .bili-dialog-bomb .appeal-box .submit
   border-color var(--c-border)
   background-color var(--c-background)
+
+.article-list-holder-block .article-list-plane .button
+  background-color transparent !important
+
+  &::after
+    content none !important
