--- a/bilibili-lite/src/v/index.styl
+++ b/bilibili-lite/src/v/index.styl
@@ -11,6 +11,15 @@ url-prefix("https://www.bilibili.com/blackboard/") {
 	@import 'base'
 	@import 'list'
 }
+@-moz-document url-prefix("https://www.bilibili.com/v/musicplus") {
+	@import 'musicplus'
+}
+@-moz-document url-prefix("https://www.bilibili.com/v/game/") {
+	@import 'game'
+}
+@-moz-document url-prefix("https://www.bilibili.com/v/cheese/") {
+	@import 'cheese'
+}
 @-moz-document url-prefix("https://www.bilibili.com/blackboard/") {
 	@import 'blackboard'
 }
