--- a/bilibili-lite/src/public/background.styl
+++ b/bilibili-lite/src/public/background.styl
@@ -159,6 +159,7 @@ textarea
 .static-popup
 .hash-popup.bg-white
 .create-vote
+.modal-wrapper
   border-color var(--c-border) !important
   background-color var(--c-background) !important
   color var(--c-text) !important
