--- a/bilibili-lite/src/manga/home.styl
+++ b/bilibili-lite/src/manga/home.styl
@@ -5,6 +5,7 @@
 
 .vertical-block-card
 .newbie-awarder .award-dialog .award-dialog-container
+.hot-category
   background-color var(--c-background) !important
 
 .section-title
