--- a/bilibili-lite/src/member/base.styl
+++ b/bilibili-lite/src/member/base.styl
@@ -53,6 +53,8 @@
 .cover-upload-box
 .ui-input-textarea
 .qa-area-ol-wrp
+#edit-page .edit-notice
+.cover-upload-box .no-img:hover
   background-color var(--c-hover) !important
 
 .dc-progress-bar
@@ -184,6 +186,7 @@ i.icon-shape:after
 .modal-wrap .header
 .read-list-component .creat-read-list-box .add-btn
 .footer-content
+#edit-page .edit-notice
   border-color var(--c-border) !important
 
 .recent-danmu-wrp .danmu-filter .left .option-menu .option-arrow-border
