--- a/bilibili-lite/src/video/danmaku.styl
+++ b/bilibili-lite/src/video/danmaku.styl
@@ -1,19 +1,24 @@
 /* 弹幕列表 */
-.player-auxiliary-area .player-auxiliary-filter-title
-	color var(--c-title) !important
-
-.bui-collapse .bui-collapse-wrap
-	border 1px solid var(--c-border)
-	border-radius 2px
-
 .player-auxiliary-area
 .bui-collapse .bui-collapse-header
 .player-auxiliary-area .player-auxiliary-filter
 .danmaku-wrap .player-auxiliary-area .player-auxiliary-danmaku-wrap
 .danmaku-wrap .player-auxiliary-area .player-auxiliary-danmaku-wrap .player-auxiliary-danmaku-load-status
 .danmaku-wrap .player-auxiliary-area .player-auxiliary-danmaku-btn-footer
-	background-color var(--c-background)
+.danmaku-wrap .player-auxiliary-area .player-auxiliary-danmaku-wrap .bscroll-vertical-scrollbar.mousedown
+.danmaku-wrap .player-auxiliary-area .player-auxiliary-danmaku-wrap:hover .bscroll-vertical-scrollbar
+	background-color var(--c-background) !important
 
 .player-auxiliary-area .player-auxiliary-danmaku .player-auxiliary-danmaku-function
 .player-auxiliary-area .player-auxiliary-danmaku .player-auxiliary-danmaku-function div
 	background-color var(--c-hover) !important
+
+.player-auxiliary-area .player-auxiliary-bscrollbar .bscroll-indicator
+	background-color var(--c-scroll) !important
+
+.player-auxiliary-area .player-auxiliary-filter-title
+	color var(--c-title) !important
+
+.bui-collapse .bui-collapse-wrap
+	border 1px solid var(--c-border)
+	border-radius 2px
