--- a/bilibili-lite/src/public/background.styl
+++ b/bilibili-lite/src/public/background.styl
@@ -4,7 +4,8 @@ span.big-vip-red
 em:not(.icon)
 .m-header .num
 .bili-header-m .num
-.badge
+.badge.pink
+.badge.is-vip
 .ss-badge
 .primary-menu .nav-menu>li .num-wrap span
 .elevator .list-box .item.on
@@ -51,6 +52,9 @@ em:not(.icon)
 .red_point
 .video-editor-ol-wrp .video-editor-ol-new
 .qa-area-ol-new
+.review-list-wrp li .review-title .review-spoiler
+.misl-ep-item .mark-icon.badge-pink
+.project-list .project-list-item .promo-item
   border 0 !important
   background-color var(--c-accent) !important
   color var(--c-white) !important
@@ -160,6 +164,8 @@ textarea
 .hash-popup.bg-white
 .create-vote
 .modal-wrapper
+.share-module .share-list .weixin-share-modal
+.selector-wrapper .more-type-wrapper
   border-color var(--c-border) !important
   background-color var(--c-background) !important
   color var(--c-text) !important
