--- a/bilibili-lite/src/public/button.styl
+++ b/bilibili-lite/src/public/button.styl
@@ -85,6 +85,12 @@ button
 .music-pagination .current
 .primary-btn
 .schedule-list .match-operate.live
+.btn-follow
+.pagelistbox .p.active
+.submit-comment
+.product-buy
+.promo-btn
+.confirm-paybtn.active
   position relative
   border-color var(--c-accent) !important
   background-color var(--c-accent) !important
@@ -188,6 +194,11 @@ button
 .score-contain .allmatch
 .schedule-time .time
 .calendar-header .day-select
+.media-tab-detail-wrp .media-tab-module-wrp .media-tab-module-write.type-btn
+.pagelistbox .p
+.submit-comment.no-login
+.confirm-paybtn
+.err-jump-btn
   border 1px solid var(--c-border) !important
   background-color var(--c-background) !important
   color var(--c-title) !important
