--- a/bilibili-lite/src/public/comment.styl
+++ b/bilibili-lite/src/public/comment.styl
@@ -3,6 +3,7 @@
 .comment-bilibili-fold .nameplate .nameplate-card .nameplate-arrow
 .bb-comment .nameplate
 .comment-bilibili-fold .nameplate
+.replies-comment-input-wrapper .replies-upload .comment-input-img span
 	display none
 
 #comment
@@ -17,25 +18,41 @@
 .comment-bilibili-fold .comment-list .list-item .reply-box .view-more .btn-more:hover
 	background-color var(--c-background) !important
 
+.emoji-box .emoji-tabs .tab-link.on
+.emoji-box .emoji-tabs .tab-link:hover
+.bb-comment .comment-list .list-item .con .vote-container .image-area .share-img
+.comment-bilibili-fold .comment-list .list-item .con .vote-container .image-area .share-img
+	background-color var(--c-hover)
+
+.dynamic-list-item-wrap .item-user a.user-name
+.textarea-container .comm-tool .comm-emoji
+	background-color transparent !important
+
+.comment .comment-selecotr .all-comments.active:before, .comment .comment-selecotr .sortByHot.active:before
+	background-color: var(--c-accent) !important
+
 .paging-box .current
 .bb-comment .nameplate .nameplate-card .nameplate-text .n-name
 .comment-bilibili-fold .nameplate .nameplate-card .nameplate-text .n-name
 .btn-box .liked span
 .btn-box .liked:hover span
+.comment .comment-hot-item-user-name
 	color var(--c-title) !important
 
 .bb-comment .comment-header .tabs-order li
 .bb-comment .comment-list .list-item .reply-box .view-more
 .comment-bilibili-fold .comment-list .list-item .reply-box .view-more
+.replies-comment-input-wrapper .replies-upload .comment-input-img
 	color var(--c-text) !important
-
-.comment-bilibili-fold .comment-header .tabs-order li.on
-.paging-box .current
-	color var(--c-accent) !important
 
 .bb-comment .stick.true-love .medal-level
 .comment-bilibili-fold .stick.true-love .medal-level
 	color var(--c-white) !important
+
+.comment-bilibili-fold .comment-header .tabs-order li.on
+.paging-box .current
+.comment .comment-selecotr .all-comments.active, .comment .comment-selecotr .sortByHot.active
+	color var(--c-accent) !important
 
 .bb-comment .comment-header
 .comment-bilibili-fold .comment-header
@@ -49,6 +66,7 @@
 .comment-area .comm-main .comm-tabs
 .bb-comment .comment-send .comment-emoji
 .comment-bilibili-fold .comment-send .comment-emoji
+.replies-comment-input-wrapper .replies-upload .comment-input-img
 .textarea-container .comm-tool .comm-emoji
 .dynamic-list-item-wrap
 .comment-area .comm-more
@@ -57,9 +75,27 @@
 .list-comment
 	border-color var(--c-border) !important
 
+.comment .comment-selecotr
+.comment .comment-hot-item-user-content
+	border-bottom: 1px solid var(--c-border)
+
+.comment
 .bb-comment .nameplate .nameplate-card .nameplate-text
 .comment-bilibili-fold .nameplate .nameplate-card .nameplate-text
-	border 0
+	border 0 !important
+
+.bb-comment .comment-list .list-item .con .vote-container:hover .text-area
+.comment-bilibili-fold .comment-list .list-item .con .vote-container:hover .text-area
+.comment .comment-selecotr
+.comment .comment-hot-item-user-content
+	box-shadow none
+
+.bb-comment .comment-header .tabs-order li.on:after
+.comment-bilibili-fold .comment-header .tabs-order li.on:after
+	background-image none
+
+.replies-comment-input-wrapper .replies-upload .comment-input-img
+	text-indent: 0 !important
 
 .bb-comment .comment-header .tabs-order li.on
 .comment-bilibili-fold .comment-header .tabs-order li.on
@@ -70,6 +106,7 @@
 .bb-comment .nameplate .nameplate-card
 .comment-bilibili-fold .nameplate .nameplate-card
 .user-card
+.replies-comment-input-wrapper .replies-upload .replies-uploading-container
 	border-color var(--c-border)
 	box-shadow none
 	background-color var(--c-background)
@@ -79,12 +116,6 @@
 	box-shadow none
 	background-color var(--c-background)
 	overflow hidden
-
-.emoji-box .emoji-tabs .tab-link.on
-.emoji-box .emoji-tabs .tab-link:hover
-.bb-comment .comment-list .list-item .con .vote-container .image-area .share-img
-.comment-bilibili-fold .comment-list .list-item .con .vote-container .image-area .share-img
-	background-color var(--c-hover)
 
 .bb-comment .comment-list .list-item .info .operation .opera-list
 .comment-bilibili-fold .comment-list .list-item .info .operation .opera-list
@@ -97,9 +128,6 @@
 	background-color var(--c-hover)
 	color var(--c-title)
 
-.bb-comment .comment-list .list-item .con .vote-container:hover .text-area
-.comment-bilibili-fold .comment-list .list-item .con .vote-container:hover .text-area
-	box-shadow none
 
 .bb-comment .comment-list .list-item .info .btn-hover:hover
 .comment-bilibili-fold .comment-list .list-item .info .btn-hover:hover
@@ -109,11 +137,3 @@
 
 	&::after
 		content none
-
-.bb-comment .comment-header .tabs-order li.on:after
-.comment-bilibili-fold .comment-header .tabs-order li.on:after
-	background-image none
-
-.dynamic-list-item-wrap .item-user a.user-name
-.textarea-container .comm-tool .comm-emoji
-	background-color transparent !important
