--- a/bilibili-lite/src/video/base.styl
+++ b/bilibili-lite/src/video/base.styl
@@ -73,6 +73,7 @@
 .up-info .u-info .desc
 .mobile-more .video-title
 ul.rate-star li i
+ul.star-wrapper li i
 .video-toolbar .ops>span i
 .main-container .tool-bar .coin-info i
 .main-container .tool-bar .share-info i
@@ -80,12 +81,14 @@ ul.rate-star li i
 .up-info .u-info .name .message i
 .multi-page .head-con .range-box i
 .coin-dialog-mask .coin-operated .coin-title
+.main-container .media-info .media-right .media-count
 	color var(--c-text) !important
 
 .coin-operated-m .coin-title span
 .coin-operated-m .mc-box.on .c-num
 .main-container .review-module .review-list .review-item .review-header .review-star li i.icon-star-full
 ul.rate-star li i.icon-star-full
+ul.star-wrapper li i.icon-star-full
 .video-info .video-data .argue i
 .video-info .video-data .copyright i
 .up-info .u-info .name .username.is-vip:hover
